# socitrack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
nrf51822/: CMakeLists.txt  README.md
nrf51822/apps/blink/: CMakeLists.txt  main.c
nrf51822/apps/tritag/: CMakeLists.txt  Makefile  ble_config.h  main.c
nrf51822/apps/tritag-anchor/: CMakeLists.txt  Makefile  main.c
nrf51822/apps/tritag-anchor-glossy-master/: CMakeLists.txt  Makefile  main.c
nrf51822/src/: CMakeLists.txt  tripoint_interface.c  tripoint_interface.h
nrf51822/src/RTT/: README.md  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h
software/: CMakeLists.txt  README.md
software/analysis/: README.md  quickplot_folder.py  requirements.txt  tottag.py  tottagAverager.py  tottagCurrentTimestamps.py  tottagLogManagement.py  tottagMotion.py  tottagRealtimeRanging.py  tottagSmoother.py  tottagStats.py  tottagVoltage.py
software/calibration/: README.md  calibration_compute.py  calibration_condense.py  calibration_log.js  measurement_log.js  module_calibration.data  module_data.ods
software/carrier/: CMakeLists.txt  README.md
software/carrier/boards/: CMakeLists.txt  README.md
software/carrier/include/: README.md  SEGGER_RTT.h  accelerometer_lis2dw12.h  boards.h  module_interface.h  rtc_ab1815.h  tottag.h  tritag.h
software/carrier/src/: CMakeLists.txt  SEGGER_RTT.c  accelerometer_lis2dw12.c  better_error_handling.c  module_interface.c  rtc_ab1815.c  tottag.c  tripoint_interface.c
software/configuration/Discovery/: model_wakeup.m
software/configuration/Energy/: get_optimized_ble_parameters.m  get_protocol_lifetime.m  model_protocol_surepoint.m  model_protocol_totternary.m  power_profiling.m
software/debug/: README.md  package-lock.json  package.json  test_noble.js  test_tags_visible.js
software/ersp/: 03-04-21.txt  README.md  apr29.txt  apr29fixednowindows.txt  apr29v2.txt  classifiers.py  exceptions.py  flawedbutinteresting.txt  forest.py  knn.py  plot.py  requirements.txt  stuff.txt  tottagProcessing.py
software/ersp/diaries/: 20-35-PDiary.csv  40-41-Diary.csv  Example-2.csv  Template-Diary.csv  Template-Diary.xlsx  Test-Diary.csv  familydiary.csv  katediaryc.csv  playroomdiary.csv
software/ersp/example_inputs/: 40-41-Diary.csv  Event-Types.txt
software/ersp/test_inputs/: 40-41-Diary.csv  41-42-Diary.csv  Event-Mapping.csv
software/firmware/: .cproject  .project  Jtag.mk  Makefile  README.md  dw1000.c  dw1000.h  glossy.c  glossy.h  host_interface.c  main.c  oneway_anchor.c  oneway_common.c  oneway_tag.c
software/firmware/launchConfigs/: SociTrackAmbiq.launch  TestBattery.launch  TestBleAndRanging.launch  TestBleReset.launch  TestBluetooth.launch  TestBluetoothTask.launch  TestButton.launch  TestBuzzer.launch  TestFull.launch  TestFullExp.launch  TestFullSegger.launch  TestIMU.launch  TestLED.launch  TestLogging.launch  TestManufacturing.launch  TestMinimal.launch  TestMinimalBLE.launch  TestPowerOff.launch  TestRTC.launch  TestRTCSet.launch  TestRanging.launch  TestRangingPower.launch  TestRangingRadio.launch  TestStorage.launch  TestSystem.launch  TestUSB.launch
software/firmware/tests/: Makefile
software/include/: SEGGER_RTT_Conf.h
software/management/: MANIFEST.in  Makefile  README.rst  requirements.txt  setup.py
software/management/dashboard/: 1_convert_to_csv.py  1_tottags_batch.py  2_convert_to_csv.py  2_tottags_batch.py  README.md  experimental_tottag.py  load_imu_data.py  output.csv  parse.py  processing.py  quick_download_trigger.py  segger_download.py  tkcal.py  tottag.py  trim_pkl.py
software/modeling/Discovery/: model_wakeup.m
software/modeling/Energy/: get_optimized_ble_parameters.m  get_protocol_lifetime.m  model_protocol_surepoint.m  model_protocol_totternary.m  power_profiling.m
software/modeling/Ranging/: analyze_cal_data.m  analyze_protocol.m  analyze_range_i2c.m  antenna_and_channel_to_subsequence_number.m  dwtime_to_millimeters.m  oneway_get_ss_index_from_settings.m  process_round_robin_cal.m  process_single_cal.m  serial_rcv.m  srl_to_double.m
software/module/: CMakeLists.txt  README.md
software/module/firmware/: API.md  Makefile  README.md  app_calibration.c  app_calibration.h  app_standard_common.c  app_standard_common.h  app_standard_init.c  app_standard_init.h  app_standard_resp.c  app_standard_resp.h  app_test_common.c  app_test_common.h  app_test_init.c  app_test_init.h  app_test_resp.c  app_test_resp.h  dw1000.c  dw1000.h  firmware.h  glossy.c  glossy.h  host_interface.c  host_interface.h  insert_calibration.py  main.c  module_conf.h  oneway_anchor.c  oneway_common.c  oneway_common.h  oneway_tag.c  polypoint_conf.h  rangetest_anchor.c  rangetest_anchor.h  rangetest_common.c  rangetest_common.h  rangetest_tag.c  rangetest_tag.h  stm32f0xx_i2c_cpal_conf.h
software/module/include/: SEGGER_RTT.h  SEGGER_RTT_Conf.h  board.h  squarepoint.h  timer.h  tripoint.h
software/module/source/: SEGGER_RTT.c  delay.c  led.c  timer.c
software/phone/: README.md  ble_interaction.js
software/phone/summon/: README.md  index.html  init_cordova.sh
software/phone/tritag-summon/: index.html
software/source/: SEGGER_RTT.c  led.c  timer.c
software/squarepoint/: .gitignore  Makefile  README.md  TotTernarySTM Default.launch  insert_calibration.py
software/squarepoint/dw1000-driver/: README.md  compiler.h  deca_device.c  deca_device_api.h  deca_param_types.h  deca_params_init.c  deca_range_tables.c  deca_regs.h  deca_types.h
software/squarepoint/firmware/: calibration.c  calibration.h  configuration.h  dw1000.c  dw1000.h  glossy.c  glossy.h  host_interface.c  host_interface.h  main.c  ranging.c  ranging.h  request.c  request.h  response.c  response.h  scheduler.c  (+3 more)
software/tottag/: Makefile
software/visualization/: .gitignore  README.md  measurement_log.js  measurement_visualize.js  package-lock.json  package.json  plot_angle_error.py  plot_speed_error.py  process_speed_experiment.py  raw_to_agg.py  raw_to_aggregate_ranges.py  visualization_1.css  visualization_1.html  visualization_1.js  visualization_2.css  visualization_2.html  visualization_2.js
(+712 files in other folders)
